fixed product schema, added name

--- a/lib/company_mangement_system_web/live/product_live/index.html.heex
+++ b/lib/company_mangement_system_web/live/product_live/index.html.heex
@@ -13,10 +13,11 @@
   row_click={fn {_id, product} -> JS.navigate(~p"/products/#{product}") end}
 >
   <:col :let={{_id, product}} label="Store"><%= product.store_id %></:col>
+  <:col :let={{_id, product}} label="Name"><%= product.name %></:col>
   <:col :let={{_id, product}} label="Vendor"><%= product.vendor %></:col>
-  <:col :let={{_id, product}} label="Wholesaleprice"><%= product.wholesalePrice %></:col>
-  <:col :let={{_id, product}} label="Retailprice"><%= product.retailPrice %></:col>
-  <:col :let={{_id, product}} label="Inventorycount"><%= product.inventoryCount %></:col>
+  <:col :let={{_id, product}} label="Whole sale price">$<%= product.wholesalePrice %></:col>
+  <:col :let={{_id, product}} label="Retail price">$<%= product.retailPrice %></:col>
+  <:col :let={{_id, product}} label="Inventory count"><%= product.inventoryCount %></:col>
   <:action :let={{_id, product}}>
     <div class="sr-only">
       <.link navigate={~p"/products/#{product}"}>Show</.link>
